# data-category

./: .gitignore  Category.hs  LICENSE  README  data-category.cabal
Category/: Hask.hs  Unit.hs  Void.hs
Data/: Category.hs
Data/Category/: AddObject.hs  Adjunction.hs  Alg.hs  Boolean.hs  CartesianClosed.hs  Comma.hs  Constraint.hs  Coproduct.hs  Cube.hs  Dialg.hs  Discrete.hs  End.hs  Enriched.hs  Fin.hs  Fix.hs  Functor.hs  Hask.hs  KanExtension.hs  Kleisli.hs  Limit.hs  Monoid.hs  Monoidal.hs  NNO.hs  NaturalTransformation.hs  Omega.hs  Pair.hs  Peano.hs  Preorder.hs  Presheaf.hs  Product.hs  RepresentableFunctor.hs  Simplex.hs  Unit.hs  Void.hs  WeightedLimit.hs  Yoneda.hs
Data/Category/Enriched/: Functor.hs  Limit.hs  Poset3.hs  Yoneda.hs
