name:                data-category
version:             0.2.0
synopsis:            Restricted categories

description:         Data-category is a collection of categories, and some categorical constructions on them.
                     .
                     You can restrict the types of the objects of your category by using a GADT for the arrow type.
                     To be able to proof to the compiler that a type is an object in some category, objects also need to be represented at the value level.
                     Therefore the 'Category' class has an associated data type 'Obj'. This which will often also be a GADT.
                     .
                     See the 'Monoid', 'Boolean' and 'Product' categories for some examples.

category:            Data
license:             BSD3
license-file:        LICENSE
author:              Sjoerd Visscher
maintainer:          sjoerd@w3future.com
stability:           experimental
homepage:            http://github.com/sjoerdvisscher/data-category
bug-reports:         http://github.com/sjoerdvisscher/data-category/issues

build-type:          Simple
cabal-version:       >= 1.6

Library
  exposed-modules:     
    Data.Category,
    Data.Category.Functor,
    Data.Category.NaturalTransformation,
    Data.Category.Limit,
    Data.Category.Adjunction,
    Data.Category.Void,
    Data.Category.Unit,
    Data.Category.Pair,
    Data.Category.Discrete,
    Data.Category.Product,
    Data.Category.Monoid,
    Data.Category.Boolean,
    Data.Category.Omega,
    Data.Category.Kleisli,
    Data.Category.Dialg,
    Data.Category.Peano,
    Data.Category.Comma
    
  build-depends:       base >= 3 && < 5
  

source-repository head
  type:     git
  location: git://github.com/sjoerdvisscher/data-category.git