name:                data-category
version:             0.3.0.2
synopsis:            Restricted categories

description:         Data-category is a collection of categories, and some categorical constructions on them.
                     .
                     You can restrict the types of the objects of your category by using a GADT for the arrow type.
                     To be able to proof to the compiler that a type is an object in some category, objects also need to be represented at the value level.
                     The corresponding identity arrow of the object is used for that.
                     .
                     See the 'Monoid', 'Boolean' and 'Product' categories for some examples.
                     .
                     Note: Strictly speaking this package defines Hask-enriched categories, not ordinary categories (which are Set-enriched.)
                     In practice this means we are allowed to ignore 'undefined' (f.e. when talking about uniqueness of morphisms),
                     and we can treat the categories as normal categories.

category:            Data
license:             BSD3
license-file:        LICENSE
author:              Sjoerd Visscher
maintainer:          sjoerd@w3future.com
stability:           experimental
homepage:            http://github.com/sjoerdvisscher/data-category
bug-reports:         http://github.com/sjoerdvisscher/data-category/issues

build-type:          Simple
cabal-version:       >= 1.6

Library
  exposed-modules:     
    Data.Category,
    Data.Category.Functor,
    Data.Category.Product,
    Data.Category.NaturalTransformation,
    Data.Category.Limit,
    Data.Category.Adjunction,
    Data.Category.Monoidal,
    Data.Category.CartesianClosed,
    Data.Category.Discrete,
    Data.Category.Monoid,
    Data.Category.Boolean,
    Data.Category.Omega,
    Data.Category.Kleisli,
    Data.Category.Dialg,
    Data.Category.Peano,
    Data.Category.Comma
    
  build-depends:       base >= 3 && < 5
  

source-repository head
  type:     git
  location: git://github.com/sjoerdvisscher/data-category.git