name:                data-category
version:             0.6.2
synopsis:            Category theory

description:         Data-category is a collection of categories, and some categorical constructions on them.
                     .
                     You can restrict the types of the objects of your category by using a GADT for the arrow type.
                     To be able to proof to the compiler that a type is an object in some category, objects also need to be represented at the value level.
                     The corresponding identity arrow of the object is used for that.
                     .
                     See the 'Boolean' and 'Product' categories for some examples.
                     .
                     Note: Strictly speaking this package defines Hask-enriched categories, not ordinary categories (which are Set-enriched.)
                     In practice this means we are allowed to ignore 'undefined' (f.e. when talking about uniqueness of morphisms),
                     and we can treat the categories as normal categories.

category:            Math
license:             BSD3
license-file:        LICENSE
author:              Sjoerd Visscher
maintainer:          sjoerd@w3future.com
stability:           experimental
homepage:            http://github.com/sjoerdvisscher/data-category
bug-reports:         http://github.com/sjoerdvisscher/data-category/issues

build-type:          Simple
cabal-version:       >= 1.10

Library
  exposed-modules:
    Data.Category,
    Data.Category.Functor,
    Data.Category.NaturalTransformation,
    Data.Category.Unit,
    Data.Category.Void,
    Data.Category.Product,
    Data.Category.Coproduct,
    Data.Category.RepresentableFunctor,
    Data.Category.Adjunction,
    Data.Category.Limit,
    Data.Category.Monoidal,
    Data.Category.CartesianClosed,
    Data.Category.Yoneda,
    Data.Category.Boolean,
    Data.Category.Fix,
    Data.Category.Kleisli,
    Data.Category.Dialg,
    Data.Category.NNO,
    Data.Category.Simplex,
    Data.Category.Cube,
    Data.Category.Comma

  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/sjoerdvisscher/data-category.git
